mostly through dt experiments, first wave

--- a/assignment1/eda/diabetes_health_indicators.ipynb
+++ b/assignment1/eda/diabetes_health_indicators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of examples: 253680\n"
+      "Number of examples: 253680\n",
+      "Number of features: 21\n",
+      "Number of positive examples: 39977\n",
+      "Number of negative examples: 213703\n"
      ]
     }
    ],
@@ -58,12 +61,15 @@
     "df = pd.read_csv(data_path)\n",
     "\n",
     "# Count examples\n",
-    "print(\"Number of examples: %s\" % df.shape[0])"
+    "print(\"Number of examples: %s\" % df.shape[0])\n",
+    "print(\"Number of features: %s\" % (df.shape[1]-1))\n",
+    "print(\"Number of positive examples: %s\" % (df[\"Diabetes_012\"]>0).sum())\n",
+    "print(\"Number of negative examples: %s\" % (df.shape[0]-(df[\"Diabetes_012\"]>0).sum()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
