--- a/assignment1/eda/eda_diabetes.ipynb
+++ b/assignment1/eda/eda_diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of examples: 768\n"
+      "Number of examples: 768\n",
+      "Number of features: 9\n",
+      "Number of positive examples: 268\n",
+      "Number of negative examples: 500\n"
      ]
     }
    ],
@@ -59,8 +62,9 @@
     "\n",
     "# Count examples\n",
     "print(\"Number of examples: %s\" % df.shape[0])\n",
-    "\n",
-    "# "
+    "print(\"Number of features: %s\" % df.shape[1])\n",
+    "print(\"Number of positive examples: %s\" % df[\"Outcome\"].sum())\n",
+    "print(\"Number of negative examples: %s\" % (df.shape[0]-df[\"Outcome\"].sum()))"
    ]
   },
   {
